<resources>
    <string name="app_name">MaterialDesign</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="photo_of_the_day_stub" translatable="false">Photo of the day</string>
    <string name="search_wiki" translatable="false">Найти в Википедии</string>
    <string name="wiki_helper_text" translatable="false">Поищите термин в википедии</string>
    <string name="favourite" translatable="false">favourite</string>
    <string name="settings" translatable="false">settings</string>
    <string name="search" translatable="false">Search</string>
    <string name="todo">TODO</string>
    <string name="onScreen1">На экран 1</string>
    <string name="onScreen2">На экран 2</string>
    <string name="today">TODAY</string>
    <string name="yesterday">YESTERDAY</string>
    <string name="TDA">TWO DAYS AGO</string>
    <string name="menu1">Меню 1</string>
    <string name="menu2">Меню 2</string>
    <string name="menu3">Меню 3</string>
    <string name="empty">""</string>
</resources>